initial implementation of function